--- a/index.html
+++ b/index.html
@@ -1,47 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Proof of Impact Protocol</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 40px;
-            background-color: #f9f9f9;
-        }
-        h1 {
-            font-size: 28px;
-            margin-bottom: 10px;
-        }
-        p {
-            font-size: 16px;
-            color: #555;
-            max-width: 600px;
-            margin: 0 auto 30px;
-        }
-        .button {
-            display: inline-block;
-            margin: 10px;
-            padding: 12px 20px;
-            font-size: 16px;
-            color: white;
-            background-color: #007BFF;
-            text-decoration: none;
-            border-radius: 6px;
-        }
-        .button:hover {
-            background-color: #0056b3;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Proof of Impact Protocol</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 40px;
+      background-color: #f4f4f4;
+    }
+    h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+    p {
+      font-size: 1.2em;
+      margin-bottom: 30px;
+    }
+    .button-container {
+      margin-top: 30px;
+    }
+    a.button {
+      display: inline-block;
+      padding: 12px 24px;
+      margin: 10px;
+      background-color: #007bff;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background-color 0.3s;
+    }
+    a.button:hover {
+      background-color: #0056b3;
+    }
+  </style>
 </head>
 <body>
-    <h1>Proof of Impact Protocol</h1>
-    <p>Welcome to the PoIP simulation site. Explore how staking, yield growth, and bounty funding work together in this on-chain impact model.</p>
+  <h1>Proof of Impact Protocol (PoIP)</h1>
+  <p>A self-sustaining protocol powered by staking, treasury yield, and AI-driven bounty coordination.</p>
+
+  <div class="button-container">
     <a class="button" href="stake.html">Stake Simulation</a>
-    <a class="button" href="yield.html">Treasury Yield</a>
-    <a class="button" href="bounties.html">View Bounties</a>
-    <a class="button" href="https://docs.google.com/document/d/1avZ_tsyX0rBXp0aErEyBDrK1YfDZfwfKXW_EhjkKpDM/edit" target="_blank">View Whitepaper</a>
+    <a class="button" href="yield.html">Treasury Yield Simulation</a>
+    <a class="button" href="bounties.html">Active Bounties</a>
+    <a class="button" href="whitepaper.html">View Whitepaper</a>
+  </div>
 </body>
 </html>
