--- a/grow.html
+++ b/grow.html
@@ -42,7 +42,7 @@
   <div class="balance" id="balanceDisplay"></div>
 
   <script>
-    const contractAddress = "YOUR_CONTRACT_ADDRESS_HERE"; // Replace with your deployed GROW token address
+    const contractAddress = "0x975D8d9D9c62416662d9c01A197522102aADDf20";
     const tokenABI = [
       "function balanceOf(address owner) view returns (uint256)",
       "function decimals() view returns (uint8)",
