--- a/reward.html
+++ b/reward.html
@@ -3,51 +3,72 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>$GROW Reward Info</title>
-  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
+  <title>$GROW Token Balance</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       text-align: center;
-      margin: 40px;
-      background-color: #f9f9f9;
+      padding: 3em;
+      background-color: #f4f6fc;
     }
     h1 {
-      color: #333;
-    }
-    #rewardInfo {
-      font-size: 1.2em;
-      margin-top: 20px;
+      color: #222;
     }
     button {
+      padding: 12px 24px;
+      font-size: 16px;
+      background-color: #0056ff;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
       margin-top: 20px;
-      padding: 10px 20px;
-      font-size: 1em;
+    }
+    button:hover {
+      background-color: #0041c4;
+    }
+    #balance {
+      margin-top: 2em;
+      font-size: 1.2em;
+      color: #333;
     }
   </style>
 </head>
 <body>
-  <h1>$GROW Staking Reward</h1>
-  <p>This page displays a simulated $GROW reward earned from staking.</p>
-  <div id="rewardInfo">Connect your wallet to view your reward.</div>
-  <button onclick="connectWallet()">Connect Wallet</button>
 
+  <h1>$GROW Token Balance</h1>
+  <p>Connect your wallet to see your current GROW balance.</p>
+  <button onclick="connectWallet()">Connect Wallet</button>
+  <div id="balance"></div>
+
+  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
   <script>
-    const rewardAmount = 250; // Simulated fixed reward
+    const GROW_TOKEN_ADDRESS = "0x975D8d9D9c62416662d9c01A197522102aADDf20"; // Replace with your deployed token address
+    const GROW_TOKEN_ABI = [
+      "function balanceOf(address owner) view returns (uint256)",
+      "function decimals() view returns (uint8)"
+    ];
 
     async function connectWallet() {
-      if (typeof window.ethereum !== 'undefined') {
+      if (typeof window.ethereum !== "undefined") {
         try {
-          const [account] = await window.ethereum.request({ method: 'eth_requestAccounts' });
-          document.getElementById('rewardInfo').innerText =
-            `Connected: ${account}\nSimulated $GROW Reward: ${rewardAmount}`;
-        } catch (err) {
-          document.getElementById('rewardInfo').innerText = 'Wallet connection failed.';
+          const [account] = await window.ethereum.request({ method: "eth_requestAccounts" });
+          const provider = new ethers.providers.Web3Provider(window.ethereum);
+          const signer = provider.getSigner();
+          const contract = new ethers.Contract(GROW_TOKEN_ADDRESS, GROW_TOKEN_ABI, signer);
+          const balance = await contract.balanceOf(account);
+          const decimals = await contract.decimals();
+          const formatted = ethers.utils.formatUnits(balance, decimals);
+          document.getElementById("balance").innerHTML = `Your $GROW balance: <strong>${formatted}</strong>`;
+        } catch (error) {
+          alert("Error connecting to wallet.");
+          console.error(error);
         }
       } else {
-        document.getElementById('rewardInfo').innerText = 'MetaMask is not installed.';
+        alert("MetaMask not detected.");
       }
     }
   </script>
+
 </body>
 </html>
