--- a/index.html
+++ b/index.html
@@ -1,52 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Proof of Impact Protocol</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
       font-family: Arial, sans-serif;
-      text-align: center;
+      background-color: #f2f2f2;
+      margin: 0;
       padding: 40px;
-      background-color: #f4f4f4;
+      text-align: center;
     }
     h1 {
+      color: #222;
       font-size: 2.5em;
-      margin-bottom: 10px;
     }
     p {
       font-size: 1.2em;
+      color: #444;
       margin-bottom: 30px;
     }
     .button-container {
-      margin-top: 30px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 12px;
+      margin-top: 20px;
     }
-    a.button {
-      display: inline-block;
-      padding: 12px 24px;
-      margin: 10px;
-      background-color: #007bff;
+    .button {
+      background-color: #0057ff;
       color: white;
-      text-decoration: none;
+      padding: 12px 24px;
+      border: none;
       border-radius: 6px;
-      font-weight: bold;
-      transition: background-color 0.3s;
+      font-size: 16px;
+      cursor: pointer;
+      text-decoration: none;
+      width: 260px;
     }
-    a.button:hover {
-      background-color: #0056b3;
+    .button:hover {
+      background-color: #003cb3;
     }
   </style>
 </head>
 <body>
   <h1>Proof of Impact Protocol (PoIP)</h1>
-  <p>A self-sustaining protocol powered by staking, treasury yield, and AI-driven bounty coordination.</p>
+  <p>Explore the live simulation, treasury tools, bounty proofs, and whitepaper for the protocol.</p>
 
   <div class="button-container">
-    <a class="button" href="stake.html">Stake Simulation</a>
-    <a class="button" href="yield.html">Treasury Yield Simulation</a>
-    <a class="button" href="bounties.html">Active Bounties</a>
-    <a class="button" href="whitepaper.html">View Whitepaper</a>
+    <a class="button" href="https://poiarchitect.github.io/Proof-of-impact/stake.html">Stake Simulation</a>
+    <a class="button" href="https://poiarchitect.github.io/Proof-of-impact/yield.html">Treasury Yield Simulation</a>
+    <a class="button" href="https://poiarchitect.github.io/Proof-of-impact/proof-001.html">Bounty Proof #001</a>
+    <a class="button" href="https://poiarchitect.github.io/Proof-of-impact/proof-002.html">Bounty Proof #002</a>
+    <a class="button" href="https://poiarchitect.github.io/Proof-of-impact/proof-003.html">Bounty Proof #003</a>
+    <a class="button" href="https://poiarchitect.github.io/Proof-of-impact/grow.html">$GROW Token Viewer</a>
+    <a class="button" href="https://poiarchitect.github.io/Proof-of-impact/whitepaper.html">View Live Whitepaper</a>
   </div>
 </body>
 </html>
