--- a/proof-001.html
+++ b/proof-001.html
@@ -35,7 +35,7 @@
   <p><strong>Amount:</strong> £100 equivalent in mobile credit</p>
 
   <h3>Uploaded Proof:</h3>
-  <img src="https://raw.githubusercontent.com/poiarchitect/Proof-of-impact/main/Proof-001.png" alt="Proof Image" />
+  <img src="Proof-001.png" alt="Proof Image" />
 
   <p><a href="bounties.html">← Back to Bounties</a></p>
 </body>
