--- a/index.html
+++ b/index.html
@@ -3,59 +3,42 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Proof of Impact Protocol</title>
+  <title>Proof of Impact Protocol (PoIP)</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
-      margin: 0;
+      background-color: #f4f6f8;
       padding: 40px;
       text-align: center;
     }
     h1 {
-      color: #222;
-      font-size: 2.5em;
-    }
-    p {
-      font-size: 1.2em;
-      color: #444;
-      margin-bottom: 30px;
-    }
-    .button-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 12px;
-      margin-top: 20px;
+      color: #2c3e50;
     }
     .button {
-      background-color: #0057ff;
-      color: white;
-      padding: 12px 24px;
-      border: none;
-      border-radius: 6px;
+      display: block;
+      width: 250px;
+      margin: 15px auto;
+      padding: 12px;
       font-size: 16px;
-      cursor: pointer;
+      background-color: #007bff;
+      color: white;
       text-decoration: none;
-      width: 260px;
+      border-radius: 5px;
     }
     .button:hover {
-      background-color: #003cb3;
+      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
-  <h1>Proof of Impact Protocol (PoIP)</h1>
-  <p>Explore the live simulation, treasury tools, bounty proofs, and whitepaper for the protocol.</p>
+  <h1>Proof of Impact Protocol</h1>
 
-  <div class="button-container">
-    <a class="button" href="https://poiarchitect.github.io/Proof-of-impact/stake.html">Stake Simulation</a>
-    <a class="button" href="https://poiarchitect.github.io/Proof-of-impact/yield.html">Treasury Yield Simulation</a>
-    <a class="button" href="https://poiarchitect.github.io/Proof-of-impact/proof-001.html">Bounty Proof #001</a>
-    <a class="button" href="https://poiarchitect.github.io/Proof-of-impact/proof-002.html">Bounty Proof #002</a>
-    <a class="button" href="https://poiarchitect.github.io/Proof-of-impact/proof-003.html">Bounty Proof #003</a>
-    <a class="button" href="https://poiarchitect.github.io/Proof-of-impact/grow.html">$GROW Token Viewer</a>
-    <a class="button" href="https://poiarchitect.github.io/Proof-of-impact/whitepaper.html">View Live Whitepaper</a>
-  </div>
+  <a class="button" href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY/edit?usp=drivesdk" target="_blank">View Whitepaper</a>
+  <a class="button" href="stake.html">Stake Simulation</a>
+  <a class="button" href="grow.html">Reward ($GROW) Page</a>
+  <a class="button" href="proof-001.html">Proof #001</a>
+  <a class="button" href="proof-002.html">Proof #002</a>
+  <a class="button" href="proof-003.html">Proof #003</a>
+
 </body>
 </html>
