--- a/index.html
+++ b/index.html
@@ -1,44 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+  <title>Proof of Impact Protocol</title>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Proof of Impact Protocol (PoIP)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f4f6f8;
-      padding: 40px;
-      text-align: center;
+      margin: 40px;
+      background-color: #f4f4f4;
+      color: #333;
     }
     h1 {
       color: #2c3e50;
     }
-    .button {
-      display: block;
-      width: 250px;
-      margin: 15px auto;
-      padding: 12px;
-      font-size: 16px;
-      background-color: #007bff;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
+    ul {
+      line-height: 1.8;
     }
-    .button:hover {
-      background-color: #0056b3;
+    a {
+      color: #007bff;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <h1>Proof of Impact Protocol</h1>
+  <h1>Proof of Impact Protocol (PoIP)</h1>
+  <p>Explore the live components, simulations, proofs, and whitepaper for the protocol.</p>
 
-  <a class="button" href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY/edit?usp=drivesdk" target="_blank">View Whitepaper</a>
-  <a class="button" href="stake.html">Stake Simulation</a>
-  <a class="button" href="grow.html">Reward ($GROW) Page</a>
-  <a class="button" href="proof-001.html">Proof #001</a>
-  <a class="button" href="proof-002.html">Proof #002</a>
-  <a class="button" href="proof-003.html">Proof #003</a>
-
+  <ul>
+    <li><a href="stake.html">Stake Simulation</a></li>
+    <li><a href="yield.html">Treasury Yield Simulation</a></li>
+    <li><a href="proof-001.html">Bounty Proof #001</a></li>
+    <li><a href="proof-002.html">Bounty Proof #002</a></li>
+    <li><a href="proof-003.html">Bounty Proof #003</a></li>
+    <li><a href="grow.html">$GROW Token Viewer</a></li>
+    <li><a href="reward.html">Reward Simulation</a></li>
+    <li><a href="bounties.html">Live Bounties</a></li>
+    <li><a href="whitepaper.html">View Live Whitepaper</a></li>
+  </ul>
 </body>
 </html>
