--- a/index.html
+++ b/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Proof of Impact Protocol</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Proof of Impact (PoIP)</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 40px;
-      background-color: #f4f4f4;
+      background-color: #f9f9f9;
       color: #333;
     }
     h1 {
       color: #2c3e50;
     }
     ul {
-      line-height: 1.8;
+      list-style-type: none;
+      padding: 0;
+    }
+    li {
+      margin: 10px 0;
     }
     a {
       color: #007bff;
       text-decoration: none;
+      font-size: 18px;
     }
     a:hover {
       text-decoration: underline;
@@ -28,8 +33,8 @@
 </head>
 <body>
   <h1>Proof of Impact Protocol (PoIP)</h1>
-  <p>Explore the live components, simulations, proofs, and whitepaper for the protocol.</p>
-
+  <p>Explore the live bounty proofs, staking simulator, treasury yield calculator, and whitepaper for the protocol.</p>
+  
   <ul>
     <li><a href="stake.html">Stake Simulation</a></li>
     <li><a href="yield.html">Treasury Yield Simulation</a></li>
@@ -37,8 +42,6 @@
     <li><a href="proof-002.html">Bounty Proof #002</a></li>
     <li><a href="proof-003.html">Bounty Proof #003</a></li>
     <li><a href="grow.html">$GROW Token Viewer</a></li>
-    <li><a href="reward.html">Reward Simulation</a></li>
-    <li><a href="bounties.html">Live Bounties</a></li>
     <li><a href="whitepaper.html">View Live Whitepaper</a></li>
   </ul>
 </body>
