--- a/index.html
+++ b/index.html
@@ -3,86 +3,71 @@
 <head>
   <title>Proof of Impact Protocol</title>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
       font-family: Arial, sans-serif;
+      margin: 40px;
+      background-color: #f9f9f9;
+      color: #333;
       text-align: center;
-      padding: 40px;
-      background-color: #f4f4f4;
     }
     h1 {
       color: #2c3e50;
     }
-    a.button {
-      display: block;
-      width: 80%;
-      max-width: 300px;
-      margin: 15px auto;
-      padding: 14px 20px;
-      background-color: #007bff;
-      color: white;
-      text-decoration: none;
-      border-radius: 6px;
-      font-size: 16px;
-    }
-    a.button:hover {
-      background-color: #0056b3;
-    }
     table {
+      width: 100%;
+      max-width: 600px;
       margin: 30px auto;
-      width: 90%;
-      max-width: 700px;
       border-collapse: collapse;
     }
     th, td {
       border: 1px solid #ccc;
-      padding: 10px;
-      text-align: left;
+      padding: 12px;
     }
     th {
-      background-color: #f0f0f0;
+      background-color: #eee;
     }
-    .footer {
-      margin-top: 40px;
+    a.button {
+      display: inline-block;
+      margin: 10px;
+      padding: 12px 20px;
+      background-color: #007bff;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+    }
+    a.button:hover {
+      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
-
   <h1>Proof of Impact Protocol</h1>
 
   <a class="button" href="whitepaper.html">View Whitepaper</a>
   <a class="button" href="stake.html">Stake Simulation</a>
-  <a class="button" href="yield.html">Treasury Yield Simulation</a>
   <a class="button" href="reward.html">Reward ($GROW) Page</a>
-  <a class="button" href="grow.html">Connect Wallet ($GROW)</a>
+  <a class="button" href="yield.html">Treasury Yield Simulation</a>
 
-  <div class="footer">
-    <h2>Impact Bounties</h2>
-    <table>
-      <tr>
-        <th>Bounty</th>
-        <th>Description</th>
-        <th>Proof</th>
-      </tr>
-      <tr>
-        <td>#001</td>
-        <td>Mobile Top-Up – Ghana</td>
-        <td><a href="proof-001.html">View Proof</a></td>
-      </tr>
-      <tr>
-        <td>#002</td>
-        <td>Food Delivery – Syria</td>
-        <td><a href="proof-002.html">View Proof</a></td>
-      </tr>
-      <tr>
-        <td>#003</td>
-        <td>School Textbooks – Kenya</td>
-        <td><a href="proof-003.html">View Proof</a></td>
-      </tr>
-    </table>
-  </div>
-
+  <h2>Live Bounty Proofs</h2>
+  <table>
+    <tr>
+      <th>Bounty</th>
+      <th>Proof Link</th>
+    </tr>
+    <tr>
+      <td>#001</td>
+      <td><a href="proof-001.html" target="_blank">View Proof</a></td>
+    </tr>
+    <tr>
+      <td>#002</td>
+      <td><a href="Proof-002.png" target="_blank">View Proof</a></td>
+    </tr>
+    <tr>
+      <td>#003</td>
+      <td><a href="Proof-003.html" target="_blank">View Proof</a></td>
+    </tr>
+  </table>
 </body>
 </html>
