--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       color: #2c3e50;
     }
     p {
-      max-width: 600px;
+      max-width: 640px;
       margin: 20px auto;
       font-size: 1.05em;
       line-height: 1.6;
@@ -53,11 +53,11 @@
 </head>
 <body>
 
-  <h1>Proof of Impact Protocol</h1>
+  <h1>Proof of Impact Protocol (PoIP)</h1>
 
   <p>
-    Proof of Impact (PoIP) is a decentralized protocol that transforms staking into real-world impact.
-    By staking, users help grow the PoIP treasury, which then allocates verified funding to global needs like humanitarian aid, infrastructure, and innovation — all powered by on-chain proof.
+    PoIP is a decentralized protocol that turns staking and yield into real-world aid and innovation. 
+    Users stake, grow the treasury, and fund verified bounties — all backed by public proof and blockchain transparency.
   </p>
 
   <div class="button-container">
@@ -65,7 +65,9 @@
     <a href="stake.html" class="button">Stake Simulation</a>
     <a href="yield.html" class="button">Treasury Yield Simulation</a>
     <a href="reward.html" class="button">Reward ($GROW) Page</a>
-    <a href="bounties.html" class="button">Bounty Proofs</a>
+    <a href="proof-001.html" class="button">Bounty Proof #001</a>
+    <a href="Proof-002.html" class="button">Bounty Proof #002</a>
+    <a href="Proof-003.html" class="button">Bounty Proof #003</a>
   </div>
 
   <footer>
