--- a/index.html
+++ b/index.html
@@ -5,70 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Proof of Impact Protocol</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f5f7fa;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-      color: #333;
-    }
-    h1 {
-      margin-top: 40px;
-      font-size: 2em;
-      color: #2c3e50;
-    }
-    p {
-      max-width: 640px;
-      margin: 20px auto;
-      font-size: 1.05em;
-      line-height: 1.6;
-    }
-    .button-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 30px;
-    }
-    a.button {
-      background-color: #007bff;
-      color: white;
-      padding: 15px 25px;
-      margin: 10px;
-      text-decoration: none;
-      border-radius: 5px;
-      width: 260px;
-      font-weight: bold;
-      transition: background-color 0.3s ease;
-    }
-    a.button:hover {
-      background-color: #0056b3;
-    }
-    footer {
-      margin-top: 40px;
-      font-size: 0.9em;
-      color: #777;
-    }
+    body {font-family: Arial, sans-serif;background:#f5f7fa;margin:0;padding:0;text-align:center;color:#333;}
+    h1 {margin:40px 0 10px;color:#2c3e50;}
+    p  {max-width:640px;margin:20px auto;font-size:1.05em;line-height:1.6;}
+    .buttons{display:flex;flex-direction:column;align-items:center;margin-top:30px;gap:12px;}
+    a.button{background:#007bff;color:#fff;padding:14px 25px;width:260px;text-decoration:none;border-radius:5px;font-weight:bold;transition:.2s;}
+    a.button:hover{background:#0056b3;}
+    footer{margin:45px 0;font-size:.9em;color:#777;}
   </style>
 </head>
 <body>
 
   <h1>Proof of Impact Protocol (PoIP)</h1>
 
-  <p>
-    PoIP is a decentralized protocol that turns staking and yield into real-world aid and innovation. 
-    Users stake, grow the treasury, and fund verified bounties — all backed by public proof and blockchain transparency.
-  </p>
+  <p>PoIP turns crypto staking into verifiable real-world impact. Treasury yields fund bounties; AI automation verifies proofs; stakers earn $GROW while improving lives.</p>
 
-  <div class="button-container">
+  <div class="buttons">
     <a href="whitepaper.html" class="button">View Whitepaper</a>
     <a href="stake.html" class="button">Stake Simulation</a>
-    <a href="yield.html" class="button">Treasury Yield Simulation</a>
+    <a href="yield.html" class="button">Treasury Yield Simulator</a>
     <a href="reward.html" class="button">Reward ($GROW) Page</a>
+    <a href="diagram.html" class="button">System Architecture Diagram</a>
   </div>
 
   <footer>
-    Licensed under GNU GPLv3 | &copy; 2025 Proof of Impact
+    Licensed under GNU GPL v3 | © 2025 Proof of Impact
   </footer>
 
 </body>
