--- a/index.html
+++ b/index.html
@@ -2,35 +2,65 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Proof of Impact Protocol</title>
   <style>
-    body {font-family: Arial, sans-serif;background:#f5f7fa;margin:0;padding:0;text-align:center;color:#333;}
-    h1 {margin:40px 0 10px;color:#2c3e50;}
-    p  {max-width:640px;margin:20px auto;font-size:1.05em;line-height:1.6;}
-    .buttons{display:flex;flex-direction:column;align-items:center;margin-top:30px;gap:12px;}
-    a.button{background:#007bff;color:#fff;padding:14px 25px;width:260px;text-decoration:none;border-radius:5px;font-weight:bold;transition:.2s;}
-    a.button:hover{background:#0056b3;}
-    footer{margin:45px 0;font-size:.9em;color:#777;}
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f6f9;
+      margin: 0;
+      padding: 20px;
+      text-align: center;
+      color: #333;
+    }
+    h1 {
+      font-size: 2.2em;
+      margin-bottom: 10px;
+      color: #2c3e50;
+    }
+    p.description {
+      font-size: 1em;
+      margin-bottom: 30px;
+      color: #555;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .button {
+      display: inline-block;
+      background-color: #007bff;
+      color: white;
+      padding: 12px 20px;
+      margin: 10px;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background-color 0.3s;
+    }
+    .button:hover {
+      background-color: #0056b3;
+    }
+    footer {
+      margin-top: 40px;
+      font-size: 0.9em;
+      color: #888;
+    }
   </style>
 </head>
 <body>
+  <h1>Proof of Impact Protocol</h1>
+  <p class="description">
+    The Proof of Impact Protocol (PoIP) is a decentralized framework for funding verified global impact using a dual-yield treasury, symbolic staking rewards, and AI-managed coordination. 
+    It is open-source, transparent, and aligned with real-world good.
+  </p>
 
-  <h1>Proof of Impact Protocol (PoIP)</h1>
-
-  <p>PoIP turns crypto staking into verifiable real-world impact. Treasury yields fund bounties; AI automation verifies proofs; stakers earn $GROW while improving lives.</p>
-
-  <div class="buttons">
-    <a href="whitepaper.html" class="button">View Whitepaper</a>
-    <a href="stake.html" class="button">Stake Simulation</a>
-    <a href="yield.html" class="button">Treasury Yield Simulator</a>
-    <a href="reward.html" class="button">Reward ($GROW) Page</a>
-    <a href="diagram.html" class="button">System Architecture Diagram</a>
-  </div>
+  <a class="button" href="whitepaper.html">View Whitepaper</a>
+  <a class="button" href="stake.html">Stake Simulation</a>
+  <a class="button" href="yield.html">Treasury Yield Tool</a>
+  <a class="button" href="grow.html">Reward ($GROW) Page</a>
 
   <footer>
-    Licensed under GNU GPL v3 | © 2025 Proof of Impact
+    Licensed under GNU General Public License v3.0 (GPL-3.0)
   </footer>
-
 </body>
 </html>
